--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.4.2",
     "framer-motion": "^11.3.2",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18"
   },
